<resources>
    <string name="app_name">Calculator</string>
    <string name="e">e</string>
    <string name="pi">π</string>
    <string name="sin">sin</string>
    <string name="deg">deg</string>
    <string name="C">C</string>
    <string name="left_brackets">(</string>
    <string name="right_brackets">)</string>
    <string name="division">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">X</string>
    <string name="subtraction">-</string>
    <string name="summation">+</string>
    <string name="equals">=</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="exampleFormula">45 + (1250 x 100) / 10</string>
    <string name="exampleResult">12,545</string>
</resources>