<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkBackground"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/formulaTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.4"
        android:fontFamily="@font/sofiapro_font_family"
        android:gravity="end|bottom"
        android:text="@string/exampleFormula"
        android:textColor="@color/colorDarkText50Opacity"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.4"
        android:fontFamily="@font/sofiapro_font_family"
        android:gravity="end|top"
        android:maxLines="1"
        android:text="@string/exampleResult"
        android:textColor="@color/colorDarkText"
        android:textSize="50sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:paddingVertical="7dp">

            <Button
                android:id="@+id/btnE"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_container_style"
                android:fontFamily="@font/sofiapro_font_family"
                android:text="@string/e"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorDarkText"
                android:textSize="25sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnPi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="15dp"
                android:layout_weight="1"
                android:background="@drawable/button_container_style"
                android:fontFamily="@font/sofiapro_font_family"
                android:text="@string/pi"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorDarkText"
                android:textSize="25sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnSin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/button_container_style"
                android:fontFamily="@font/sofiapro_font_family"
                android:text="@string/sin"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorDarkText"
                android:textSize="25sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnDeg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_container_style"
                android:fontFamily="@font/sofiapro_font_family"
                android:text="@string/deg"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorDarkText"
                android:textSize="25sp"
                tools:ignore="ButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingVertical="7dp">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_delete_style"
                android:fontFamily="@font/sofiapro_font_family"
                android:text="@string/C"
                android:textAlignment="center"
                android:textColor="@color/colorDarkDeleteText"
                android:textSize="25sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnLeftBrackets"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="15dp"
                android:layout_weight="1"
                android:background="@drawable/button_container_style"
                android:fontFamily="@font/sofiapro_font_family"
                android:text="@string/left_brackets"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorDarkText"
                android:textSize="25sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnRightBrackets"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/button_container_style"
                android:fontFamily="@font/sofiapro_font_family"
                android:text="@string/right_brackets"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorDarkText"
                android:textSize="25sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnDivision"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_operator_style"
                android:fontFamily="@font/sofiapro_font_family"
                android:text="@string/division"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorDarkText"
                android:textSize="25sp"
                tools:ignore="ButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingVertical="7dp">

            <Button
                android:id="@+id/btnSeven"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_container_style"
                android:fontFamily="@font/sofiapro_font_family"
                android:text="@string/seven"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorDarkText"
                android:textSize="25sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnEight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="15dp"
                android:layout_weight="1"
                android:background="@drawable/button_container_style"
                android:fontFamily="@font/sofiapro_font_family"
                android:text="@string/eight"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorDarkText"
                android:textSize="25sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnNine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/button_container_style"
                android:fontFamily="@font/sofiapro_font_family"
                android:text="@string/nine"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorDarkText"
                android:textSize="25sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_operator_style"
                android:fontFamily="@font/sofiapro_font_family"
                android:text="@string/multiply"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorDarkText"
                android:textSize="25sp"
                tools:ignore="ButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingVertical="7dp">

            <Button
                android:id="@+id/btnFour"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_container_style"
                android:fontFamily="@font/sofiapro_font_family"
                android:text="@string/four"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorDarkText"
                android:textSize="25sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnFive"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="15dp"
                android:layout_weight="1"
                android:background="@drawable/button_container_style"
                android:fontFamily="@font/sofiapro_font_family"
                android:text="@string/five"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorDarkText"
                android:textSize="25sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnSix"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/button_container_style"
                android:fontFamily="@font/sofiapro_font_family"
                android:text="@string/six"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorDarkText"
                android:textSize="25sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/bntSubtraction"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_operator_style"
                android:fontFamily="@font/sofiapro_font_family"
                android:text="@string/subtraction"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorDarkText"
                android:textSize="25sp"
                tools:ignore="ButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingVertical="7dp">

            <Button
                android:id="@+id/bntOne"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_container_style"
                android:fontFamily="@font/sofiapro_font_family"
                android:text="@string/one"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorDarkText"
                android:textSize="25sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/bntTwo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="15dp"
                android:layout_weight="1"
                android:background="@drawable/button_container_style"
                android:fontFamily="@font/sofiapro_font_family"
                android:text="@string/two"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorDarkText"
                android:textSize="25sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/bntThree"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/button_container_style"
                android:fontFamily="@font/sofiapro_font_family"
                android:text="@string/three"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorDarkText"
                android:textSize="25sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnSummation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_operator_style"
                android:fontFamily="@font/sofiapro_font_family"
                android:text="@string/summation"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorDarkText"
                android:textSize="25sp"
                tools:ignore="ButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnZero"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="18"
                android:background="@drawable/button_container_style"
                android:fontFamily="@font/sofiapro_font_family"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorDarkText"
                android:textSize="25sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnDot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="15dp"
                android:layout_weight="0.1"
                android:background="@drawable/button_container_style"
                android:fontFamily="@font/sofiapro_font_family"
                android:text="@string/dot"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorDarkText"
                android:textSize="25sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnEquals"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_equal_style"
                android:fontFamily="@font/sofiapro_font_family"
                android:text="@string/equals"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorDarkText"
                android:textSize="25sp"
                tools:ignore="ButtonStyle" />
        </TableRow>
    </TableLayout>


</LinearLayout>